--- a/css/style.css
+++ b/css/style.css
@@ -258,13 +258,15 @@ p {
 
 .top-header {
   background: #000;
-  padding: 10px 5%;
+  padding: 2px 5%;
   background: -moz-linear-gradient(left, #960605 0%, #1c0000 100%);
   background: -webkit-linear-gradient(left, #e4340d 0%, #f27a2e 100%);
   background: linear-gradient(to right, #e4330d 0%, #f27a2e 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#960605', endColorstr='#1c0000', GradientType=1);
 }
-
+.top-left ul {
+  margin: auto 0;
+}
 ul.contactSec {
   width: 100%;
   margin: 0;
@@ -334,9 +336,10 @@ ul.contactSec li a span i {
 .col-md-6.top-left p {
   color: #fff;
   font-family: 'Spartan', sans-serif;
+  margin: auto 0;
 }
 .search_form {
-  width: 15%;
+  width: 14%;
   margin-left: auto;
   float: right;
   position: relative;
@@ -527,14 +530,14 @@ ul.menu-nav li:hover::after, ul.menu-nav li ul li:hover::after {
   -moz-transition: all ease-in-out 0.5s;
 }
 .catagories {
-  margin: auto 0;
+  margin: auto 10px auto 0px;
 }
 .catagories a i {
   padding: 10px;
   color: #fff;
   background: -moz-linear-gradient(left, #960605 0%, #1c0000 100%);
   background: -webkit-linear-gradient(left, #e4340d 0%, #f27a2e 100%);
-  background: linear-gradient(to right, #e4330d 0%, #f27a2e 100%);
+  background: linear-gradient(to top, #e4330d 0%, #f27a2e 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#960605', endColorstr='#1c0000', GradientType=1);
   font-size: 22px;
 }
@@ -741,8 +744,18 @@ section.banner-sec {
 .left-side-pro .item {
   width: 100%;
   height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  text-align: center;
 }
-
+.submenu ul li a {
+  margin: 10px;
+  position: relative;
+  padding: 5px;
+  display: block;
+  font-size: 23px;
+}
 
 
 
