--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ p {
 }
 
 .common-space {
-  padding-top: 80px;
+  padding-top: 50px;
   /* padding-bottom: 80px; */
 }
 .cd-top.cd-fade-out {
@@ -529,67 +529,7 @@ ul.menu-nav li:hover::after, ul.menu-nav li ul li:hover::after {
   -webkit-transition: all ease-in-out 0.5s;
   -moz-transition: all ease-in-out 0.5s;
 }
-.catagories {
-  margin: auto 10px auto 0px;
-}
-.catagories a i {
-  padding: 10px;
-  color: #fff;
-  background: -moz-linear-gradient(left, #960605 0%, #1c0000 100%);
-  background: -webkit-linear-gradient(left, #e4340d 0%, #f27a2e 100%);
-  background: linear-gradient(to top, #e4330d 0%, #f27a2e 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#960605', endColorstr='#1c0000', GradientType=1);
-  font-size: 22px;
-}
-.catagory-menu ul li a img {
-  width: 15%;
-  margin-right: 10px;
-  vertical-align: middle;
-  margin-bottom: 5px;
-}
-.catagory-menu ul li a {
-  font-size: 16px;
-  font-weight: 600;
-  vertical-align: middle;
-  color: #000;
-  display: block;
-}
-ul.menu-nav li.active:after {
-  opacity: 1;
-  width: 100%;
-}
-.submenu ul li a {
-  padding: 5px;
-  position: relative;
-  display: block;
-  font-size: 11px;
-}
-.catagory-menu ul li:hover {
-  background: #ffb600;
-}
-.activate {
-  background: #ffb600;
-}
-.unactive {
-  background: none;
-}
-/* .catagory-menu ul li:hover .submenu {
-  display: block;
-} */
-.submenu, .sub-submenu {
-  display: none;
-  transition: all ease-in-out 0.5s;
-  -webkit-transition: all ease-in-out 0.5s;
-  -moz-transition: all ease-in-out 0.5s;
-}
 
-/* .catagory-menu ul li ul li:hover .sub-submenu {
-  display: block;
-} */
-
-.show-menu {
-  display: block;
-}
 
 
 
@@ -680,9 +620,8 @@ button.owl-next {
   object-fit: cover;
 }
 .page-sort-banner {
-  margin: 20px 0px;
+  margin: 50px 0 -5px 0;
   width: 100%;
-  padding: 0 40px;
   background: #f8efea;
 }
 .ban-content {
@@ -779,8 +718,72 @@ section.banner-sec {
   align-content: center;
   cursor: pointer;
 }
+.catagories {
+  margin: auto 10px auto 0px;
+}
+.catagories a i {
+  padding: 10px;
+  color: #fff;
+  background: -moz-linear-gradient(left, #960605 0%, #1c0000 100%);
+  background: -webkit-linear-gradient(left, #e4340d 0%, #f27a2e 100%);
+  background: linear-gradient(to top, #e4330d 0%, #f27a2e 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#960605', endColorstr='#1c0000', GradientType=1);
+  font-size: 22px;
+}
+.catagory-menu ul li a img {
+  width: 15%;
+  margin-right: 10px;
+  vertical-align: middle;
+  margin-bottom: 5px;
+}
+.catagory-menu ul li a {
+  font-size: 16px;
+  font-weight: 600;
+  vertical-align: middle;
+  color: #fff;
+  display: block;
+}
+ul.menu-nav li.active:after {
+  opacity: 1;
+  width: 100%;
+}
+.submenu ul li a {
+  padding: 5px;
+  position: relative;
+  display: block;
+  font-size: 11px;
+}
+.catagory-menu ul li:hover {
+  background: #ffb600;
+}
+.activate {
+  background: #ffb600;
+}
+.unactive {
+  background: none;
+}
+/* .catagory-menu ul li:hover .submenu {
+  display: block;
+} */
+.submenu, .sub-submenu {
+  display: none;
+  transition: all ease-in-out 0.5s;
+  -webkit-transition: all ease-in-out 0.5s;
+  -moz-transition: all ease-in-out 0.5s;
+}
 
+/* .catagory-menu ul li ul li:hover .sub-submenu {
+  display: block;
+} */
 
+.show-menu {
+  display: block;
+}
+ul#cat-manu {
+  overflow-y: auto;
+  width: 100%;
+  height: 100vh;
+}
 
 
 
