--- a/css/style.css
+++ b/css/style.css
@@ -623,6 +623,7 @@ button.owl-next {
   margin: 50px 0 -5px 0;
   width: 100%;
   background: #f8efea;
+  overflow: hidden;
 }
 .ban-content {
   display: flex;
@@ -635,18 +636,30 @@ button.owl-next {
   width: 100%;
 }
 h4.sub-text {
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 400;
   margin-bottom: 20px;
-  margin-top: 5%;
+  margin-top: 0;
 }
 h3.entry-title {
-  font-size: 24px;
+  font-size: 14px;
   font-weight: 400;
 }
-
-
-
+.ban-image img {
+  float: right;
+  width: 38%;
+}
+.miniban-left-con {
+  width: 50%;
+  float: left;
+  align-content: center;
+  flex-wrap: wrap;
+  display: flex;
+}
+.miniban-right-con {
+  width: 50%;
+  float: left;
+}
 
 
 
@@ -897,8 +910,9 @@ ul#cat-manu {
 .pro-image img {
   margin: 0 auto 20px;
   width: 100%;
-  height: 300px;
-  object-fit: cover;
+  height: 200px;
+  overflow: hidden;
+  object-fit: contain;
 }
 
 .pro-details p {
@@ -1053,10 +1067,26 @@ button:focus{
   text-align: left;
 }
 
+.pro-details {
+  overflow: hidden;
+  position: relative;
+}
 
-
-
-
+.cart-btn a {
+  width: 50px;
+  height: 45px;
+  background: url(../images/sprite.png) no-repeat 0 0;
+  background-position: 4px -40px;
+  display: block;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+.cart-btn a:hover {
+  background: url(../images/sprite.png) no-repeat 0 0;
+  background-position: -45px -41px;
+  right: 3px;
+}
 
 
 
